src/index.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap");
*,
*::before,
*::after {
  box-sizing: border-box;
  padding: 0px;
  margin: 0px;
  font-family: "Open Sans", sans-serif;
}

.margin-left {
  margin-left: 15px;
}
.margin-top-l {
  margin-top: 50px;
}
.margin-bottom {
  margin-bottom: 20px;
}
.btn {
  border: 0;
  outline: 0;
  font-size: 13px;
  letter-spacing: 1.76px;
  padding: 10px 34px;
  border-radius: 5px;
  display: inline-block;
  text-align: center;
  font-weight: 700;
  cursor: pointer;
  transition: background 0.2s, color 0.2s;
  height: 40px;
}
.btn-round,
.btn-round--liked {
  background: transparent;
  color: white;
  outline: none;
  /* border: 1px solid rgb(250, 250, 250); */
  border: none;
  box-shadow: 0 0 0 0.07em rgb(250, 248, 248);
  border-radius: 50%;
  width: 36px;
  padding: 7px 0px;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  font-weight: bold;
  font-size: 20px;
}
.btn-round--liked {
  color: #1db954;
}
.btn-round:hover,
.btn-round--liked:hover {
  transition: 0s;
  transform: scale(1.05);
}
.btn--green {
  background: #1db954;
  color: white;
}
.btn--white {
  background: white;
  color: black;
  text-decoration: none;
}
.btn--green:hover {
  transition: 0s;
  transform: scale(1.05);
}
.btn:hover {
  background: #1db954;
  color: white;
}
.btn--large {
  font-size: 18px;
  height: 50px;
}
.btn--circle {
  border-radius: 50px;
}
.root {
  width: 100%;
  height: 100vh;
  display: flex;
  flex-direction: column;
}
.root__wrap {
  flex: 1;
  display: flex;
}
.root__sidebar {
  flex-basis: 232px;
  background: #040404;
  background: #0e0d0d;
}
.root__content-container {
  flex: 1;
  min-width: 700px;
  display: flex;
  flex-direction: column;
}
.root__searchbar {
  flex-basis: 60px;
  background: #040404;
  background: #0e0d0d;
  color: white;
  display: flex;
  padding: 0 30px;
  align-items: center;
  justify-content: space-between;
}
.root__content {
  flex: 1;
  background: #161616;
  position: relative;
}
.root__audio-player {
  flex-basis: 90px;
  background: #282828;
}
.page-not-found {
  background: rgb(143, 27, 50);
  background: linear-gradient(
    39deg,
    rgba(143, 27, 50, 1) 13%,
    rgba(224, 79, 54, 1) 77%
  );
  height: 100%;
  color: white;
  display: flex;
  justify-content: center;
  align-items: center;
}
.page-not-found img {
  width: 300px;
  display: block;
  margin: 20px auto;
}
.page-not-found .wrap {
  text-align: center;
}
.sk-fading-circle {
  width: 50px;
  height: 50px;
  position: relative;
}

.sk-fading-circle .sk-circle {
  width: 100%;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
}

.sk-fading-circle .sk-circle:before {
  content: "";
  display: block;
  margin: 0 auto;
  width: 15%;
  height: 15%;
  background-color: #eee;
  border-radius: 100%;
  -webkit-animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
  animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
}
.sk-fading-circle .sk-circle2 {
  -webkit-transform: rotate(30deg);
  -ms-transform: rotate(30deg);
  transform: rotate(30deg);
}
.sk-fading-circle .sk-circle3 {
  -webkit-transform: rotate(60deg);
  -ms-transform: rotate(60deg);
  transform: rotate(60deg);
}
.sk-fading-circle .sk-circle4 {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}
.sk-fading-circle .sk-circle5 {
  -webkit-transform: rotate(120deg);
  -ms-transform: rotate(120deg);
  transform: rotate(120deg);
}
.sk-fading-circle .sk-circle6 {
  -webkit-transform: rotate(150deg);
  -ms-transform: rotate(150deg);
  transform: rotate(150deg);
}
.sk-fading-circle .sk-circle7 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}
.sk-fading-circle .sk-circle8 {
  -webkit-transform: rotate(210deg);
  -ms-transform: rotate(210deg);
  transform: rotate(210deg);
}
.sk-fading-circle .sk-circle9 {
  -webkit-transform: rotate(240deg);
  -ms-transform: rotate(240deg);
  transform: rotate(240deg);
}
.sk-fading-circle .sk-circle10 {
  -webkit-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
}
.sk-fading-circle .sk-circle11 {
  -webkit-transform: rotate(300deg);
  -ms-transform: rotate(300deg);
  transform: rotate(300deg);
}
.sk-fading-circle .sk-circle12 {
  -webkit-transform: rotate(330deg);
  -ms-transform: rotate(330deg);
  transform: rotate(330deg);
}
.sk-fading-circle .sk-circle2:before {
  -webkit-animation-delay: -1.1s;
  animation-delay: -1.1s;
}
.sk-fading-circle .sk-circle3:before {
  -webkit-animation-delay: -1s;
  animation-delay: -1s;
}
.sk-fading-circle .sk-circle4:before {
  -webkit-animation-delay: -0.9s;
  animation-delay: -0.9s;
}
.sk-fading-circle .sk-circle5:before {
  -webkit-animation-delay: -0.8s;
  animation-delay: -0.8s;
}
.sk-fading-circle .sk-circle6:before {
  -webkit-animation-delay: -0.7s;
  animation-delay: -0.7s;
}
.sk-fading-circle .sk-circle7:before {
  -webkit-animation-delay: -0.6s;
  animation-delay: -0.6s;
}
.sk-fading-circle .sk-circle8:before {
  -webkit-animation-delay: -0.5s;
  animation-delay: -0.5s;
}
.sk-fading-circle .sk-circle9:before {
  -webkit-animation-delay: -0.4s;
  animation-delay: -0.4s;
}
.sk-fading-circle .sk-circle10:before {
  -webkit-animation-delay: -0.3s;
  animation-delay: -0.3s;
}
.sk-fading-circle .sk-circle11:before {
  -webkit-animation-delay: -0.2s;
  animation-delay: -0.2s;
}
.sk-fading-circle .sk-circle12:before {
  -webkit-animation-delay: -0.1s;
  animation-delay: -0.1s;
}

@-webkit-keyframes sk-circleFadeDelay {
  0%,
  39%,
  100% {
    opacity: 0;
  }
  40% {
    opacity: 1;
  }
}

@keyframes sk-circleFadeDelay {
  0%,
  39%,
  100% {
    opacity: 0;
  }
  40% {
    opacity: 1;
  }
}
.loader-container,
.error-container,
.error-container--small {
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}
.error-container--small {
  height: 350px;
}
.error-container div,
.error-container--small div {
  color: white;
  text-align: center;
}
.error-icon {
  font-size: 60px;
}

.container-spinner {
  height: 100px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.home-card-list {
  /* display: flex;
  flex-wrap: wrap;
  margin: 15px 0; */
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
  gap: 25px;
  width: 100%;
  margin-top: 40px;
}
.List {
  outline: none;
}
.Grid {
  background: grey;
  outline: none;
}
.Liste {
  outline: none;
}
.pop {
  display: flex;
  padding: 0;
  margin: 0;
}
.preload {
  background: #161616;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}
.Listar {
  outline: none;
}
.Listar::-webkit-scrollbar {
  width: 0.3em;
  background: transparent;
}

.Listar::-webkit-scrollbar-thumb {
  background-color: rgb(110, 110, 110);
  outline: 1px solid slategrey;
  border-radius: 50px;
  outline: none;
}
/* .ReactVirtualized__Grid__innerScrollContainer {
  overflow: visible !important;
}
.ReactVirtualized__Grid {
  overflow: visible !important;
} */
.ReactModal__Overlay {
  background: rgba(0, 0, 0, 0);

  transition: 0.3s;
  transition-timing-function: ease-out;
}
.Overlay {
  position: fixed;
  width: 100%;
  top: 0;
  left: 0;
  z-index: 999;
  z-index: 100;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}
.Modal {
  z-index: 1000;
  display: flex;
  justify-content: center;
  align-items: center;
  outline: none;
}
.ReactModal__Overlay--after-open {
  background: rgba(0, 0, 0, 0.5);
}

.ReactModal__Overlay--before-close {
  background: rgba(0, 0, 0, 0);
  transition-delay: 0.2s;
}
.ReactModal__Content {
  transition: 0.2s;
  transform: scale(0);
}
.ReactModal__Content--after-open {
  opacity: 1;
  transition-delay: 0.2s;
  transform: scale(1);
}
.ReactModal__Content--before-close {
  opacity: 0;
  transform: scale(0);
  transition-delay: 0s;
}

